--- a/src/gcDataServices/gcDataServices.RavenDb/gcDataServices.RavenDb.csproj
+++ b/src/gcDataServices/gcDataServices.RavenDb/gcDataServices.RavenDb.csproj
@@ -64,11 +64,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="RavenCommandService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RavenQueryService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\gcDataServices\gcDataServices.csproj">
+      <Project>{F49E612C-1946-4E58-9DBE-0445BE5EC845}</Project>
+      <Name>gcDataServices</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
