--- a/src/gcDataServices/gcDataServices/gcDataServices.csproj
+++ b/src/gcDataServices/gcDataServices/gcDataServices.csproj
@@ -31,11 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="gcFactories">
-      <HintPath>..\packages\gcFactories.1.0.14\lib\net40\gcFactories.dll</HintPath>
+    <Reference Include="gcFactories, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\gcFactories.1.0.15\lib\net40\gcFactories.dll</HintPath>
     </Reference>
-    <Reference Include="gcFactoriesMEF">
-      <HintPath>..\packages\gcFactories.1.0.14\lib\net40\gcFactoriesMEF.dll</HintPath>
+    <Reference Include="gcFactoriesMEF, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\gcFactories.1.0.15\lib\net40\gcFactoriesMEF.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
