big refactor to have successfull llblgen unit tests

--- a/src/gcDataServices/gcDataServices.LLBLGen/gcDataServices.LLBLGen.csproj
+++ b/src/gcDataServices/gcDataServices.LLBLGen/gcDataServices.LLBLGen.csproj
@@ -49,6 +49,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="LLBLGenCommandService.cs" />
+    <Compile Include="LLBLGenDataScope.cs" />
+    <Compile Include="LLBLGenQueryService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
