--- a/src/gcDataServices/gcDataServices.RavenDb/gcDataServices.RavenDb.csproj
+++ b/src/gcDataServices/gcDataServices.RavenDb/gcDataServices.RavenDb.csproj
@@ -66,6 +66,7 @@
   <ItemGroup>
     <Compile Include="RavenCommandService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RavenDataScope.cs" />
     <Compile Include="RavenQueryService.cs" />
   </ItemGroup>
   <ItemGroup>
