--- a/src/gcDataServices/packages/repositories.config
+++ b/src/gcDataServices/packages/repositories.config
@@ -2,5 +2,6 @@
 <repositories>
   <repository path="..\gcDataServices.Tests\packages.config" />
   <repository path="..\gcDataServices.RavenDb\packages.config" />
+  <repository path="..\gcDataServices.LLBLGen.Tests\packages.config" />
   <repository path="..\gcDataServices\packages.config" />
 </repositories>
