--- a/src/gcDataServices/gcDataServices.LLBLGen.Tests/gcDataServices.LLBLGen.Tests.csproj
+++ b/src/gcDataServices/gcDataServices.LLBLGen.Tests/gcDataServices.LLBLGen.Tests.csproj
@@ -5,11 +5,11 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{C73BBEF1-798A-4CDA-921F-3C4235C41EE3}</ProjectGuid>
+    <ProjectGuid>{71042B22-1D32-485D-8C73-FC9F5674A153}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>gcDataServices.Tests</RootNamespace>
-    <AssemblyName>gcDataServices.Tests</AssemblyName>
+    <RootNamespace>gcDataServices.LLBLGen.Tests</RootNamespace>
+    <AssemblyName>gcDataServices.LLBLGen.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -37,8 +37,11 @@
     <Reference Include="gcFactoriesMEF, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\gcFactories.1.0.20\lib\net40\gcFactoriesMEF.dll</HintPath>
     </Reference>
-    <Reference Include="Moq">
-      <HintPath>..\packages\Moq.4.0.10827\lib\NET40\Moq.dll</HintPath>
+    <Reference Include="Northwind.DAL">
+      <HintPath>dependencies\Northwind.DAL.dll</HintPath>
+    </Reference>
+    <Reference Include="Northwind.DALDBSpecific">
+      <HintPath>dependencies\Northwind.DALDBSpecific.dll</HintPath>
     </Reference>
     <Reference Include="nunit.framework">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\nunit.framework.dll</HintPath>
@@ -49,6 +52,18 @@
     <Reference Include="pnunit.framework">
       <HintPath>..\packages\NUnit.2.5.10.11092\lib\pnunit.framework.dll</HintPath>
     </Reference>
+    <Reference Include="SD.LLBLGen.Pro.DQE.SqlServer.NET20, Version=3.1.0.0, Culture=neutral, PublicKeyToken=ca73b74ba4e3ff27, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>dependencies\SD.LLBLGen.Pro.DQE.SqlServer.NET20.dll</HintPath>
+    </Reference>
+    <Reference Include="SD.LLBLGen.Pro.LinqSupportClasses.NET35, Version=3.1.0.0, Culture=neutral, PublicKeyToken=ca73b74ba4e3ff27, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>dependencies\SD.LLBLGen.Pro.LinqSupportClasses.NET35.dll</HintPath>
+    </Reference>
+    <Reference Include="SD.LLBLGen.Pro.ORMSupportClasses.NET20, Version=3.1.0.0, Culture=neutral, PublicKeyToken=ca73b74ba4e3ff27, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>dependencies\SD.LLBLGen.Pro.ORMSupportClasses.NET20.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -58,13 +73,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataServicesTest.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="ServiceInfo\CustomerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceInfo\MyDataService.cs" />
+    <Compile Include="ServiceInfo\OrderService.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="App.config" />
+    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\gcDataServices.LLBLGen\gcDataServices.LLBLGen.csproj">
+      <Project>{F689831B-08E9-42BB-85AB-36095F1E7D7B}</Project>
+      <Name>gcDataServices.LLBLGen</Name>
+    </ProjectReference>
     <ProjectReference Include="..\gcDataServices\gcDataServices.csproj">
       <Project>{F49E612C-1946-4E58-9DBE-0445BE5EC845}</Project>
       <Name>gcDataServices</Name>
