--- a/src/gcDataServices/gcDataServices.nuspec
+++ b/src/gcDataServices/gcDataServices.nuspec
@@ -1,21 +1,21 @@
 <?xml version="1.0"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2010/07/nuspec.xsd">
   <metadata>
-    <id>gcRavenDbSupportLibs</id>
+    <id>gcDataServices</id>
     <version>1.0</version>
-    <title>RavenDb Support Libraries</title>
-    <authors>JeremiahRedekop,Ryan D Hatch</authors>
+    <title>Simple Data Services Library</title>
+    <authors>JeremiahRedekop, Ryan D Hatch</authors>
     <owners>GeniusCode,LLC</owners>
-    <projectUrl>https://github.com/jeremiahredekop/Ravendb-SupportLibraries</projectUrl>
+    <projectUrl>https://jeremiahredekop@github.com/GeniusCode/GeniusCode.Components.DataServices.git</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
-    <description>Helpers Classes for RavenDb</description>
-    <summary>Helpers Classes for RavenDb.</summary>
-    <tags>RavenDb</tags>
+    <description>Lightweight classes that help to encapsulate data access calls</description>
+    <summary>Lightweight classes that help to encapsulate data access calls</summary>
+    <tags>ioc di data </tags>
     <dependencies>
-      <dependency id="RavenDB" version="1.0.0.427" />
+      <dependency id="gcFactories" version="1.0.20" />
     </dependencies>
   </metadata>
   <files>
-    <file src="src\RavenSupportLib\bin\Release\GeniusCode.RavenDb.dll" target="lib\net40\GeniusCode.RavenDb.dll" />
+    <file src="src\gcDataServices\gcDataServices\bin\Release\gcDataServices.dll" target="lib\net40" />
   </files>
 </package>
