--- a/src/gcDataServices/gcDataServices.nuspec
+++ b/src/gcDataServices/gcDataServices.nuspec
@@ -6,7 +6,7 @@
     <title>Simple Data Services Library</title>
     <authors>JeremiahRedekop, Ryan D Hatch</authors>
     <owners>GeniusCode,LLC</owners>
-    <projectUrl>https://jeremiahredekop@github.com/GeniusCode/GeniusCode.Components.DataServices.git</projectUrl>
+    <projectUrl>https://github.com/GeniusCode/GeniusCode.Components.DataServices</projectUrl>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <description>Lightweight classes that help to encapsulate data access calls</description>
     <summary>Lightweight classes that help to encapsulate data access calls</summary>
