--- a/src/gcDataServices/gcDataServices.LLBLGen/gcDataServices.LLBLGen.csproj
+++ b/src/gcDataServices/gcDataServices.LLBLGen/gcDataServices.LLBLGen.csproj
@@ -31,6 +31,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="gcFactories, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL" />
     <Reference Include="SD.LLBLGen.Pro.LinqSupportClasses.NET35, Version=3.1.0.0, Culture=neutral, PublicKeyToken=ca73b74ba4e3ff27, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\LLBLGen.Dependencies\SD.LLBLGen.Pro.LinqSupportClasses.NET35.dll</HintPath>
@@ -51,6 +52,7 @@
     <Compile Include="LLBLGenCommandService.cs" />
     <Compile Include="LLBLGenDataScope.cs" />
     <Compile Include="LLBLGenQueryService.cs" />
+    <Compile Include="LLBLGenTransactionHarness.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
