added raven Transaction harness class

--- a/src/gcDataServices/gcDataServices.RavenDb/gcDataServices.RavenDb.csproj
+++ b/src/gcDataServices/gcDataServices.RavenDb/gcDataServices.RavenDb.csproj
@@ -34,6 +34,9 @@
     <Reference Include="AsyncCtpLibrary, Version=1.0.4107.18181, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\RavenDB.1.0.0.457\lib\net40\AsyncCtpLibrary.dll</HintPath>
     </Reference>
+    <Reference Include="gcFactories, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\gcFactories.1.0.23\lib\net40\gcFactories.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>..\packages\Newtonsoft.Json.4.0.2\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
