--- a/src/gcDataServices/gcDataServices.LLBLGen.Tests/App.config
+++ b/src/gcDataServices/gcDataServices.LLBLGen.Tests/App.config
@@ -1,6 +1,12 @@
 ﻿<?xml version="1.0"?>
 <configuration>
-	<appSettings>
-		<add key="ConnectionString.SQL Server (SqlClient)" value="data source=192.168.1.51\SQLEXPRESS,50454;initial catalog=master;User ID=northwind;Password=northwind;persist security info=False;packet size=4096"/>
-	</appSettings>
+  <appSettings>
+    <add key="ConnectionString.SQL Server (SqlClient)" value="data source=192.168.1.51\SQLEXPRESS,50454;initial catalog=master;User ID=northwind;Password=northwind;persist security info=False;packet size=4096"/>
+  </appSettings>
+
+  <system.diagnostics>
+    <switches>
+      <add name="SqlServerDQE" value="4" />
+    </switches>
+  </system.diagnostics>
 </configuration>
