--- a/src/gcDataServices/gcDataServices.LLBLGen.Tests/gcDataServices.LLBLGen.Tests.csproj
+++ b/src/gcDataServices/gcDataServices.LLBLGen.Tests/gcDataServices.LLBLGen.Tests.csproj
@@ -78,16 +78,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Class1.cs" />
+    <Compile Include="BasicTests.cs" />
+    <Compile Include="DataScopeTests.cs" />
     <Compile Include="LLBLGenTransactionHarnessTests.cs" />
     <Compile Include="ServiceInfo\CustomerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceInfo\MyDataService.cs" />
     <Compile Include="ServiceInfo\OrderService.cs" />
+    <Compile Include="Support\TestHelpers.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="ClassDiagram1.cd" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
