--- a/src/gcDataServices/gcDataServices.LLBLGen.Tests/gcDataServices.LLBLGen.Tests.csproj
+++ b/src/gcDataServices/gcDataServices.LLBLGen.Tests/gcDataServices.LLBLGen.Tests.csproj
@@ -31,11 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="gcFactories, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\gcFactories.1.0.23\lib\net40\gcFactories.dll</HintPath>
+    <Reference Include="Autofac">
+      <HintPath>..\packages\Autofac.2.5.2.830\lib\NET40\Autofac.dll</HintPath>
     </Reference>
-    <Reference Include="gcFactoriesMEF, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\gcFactories.1.0.23\lib\net40\gcFactoriesMEF.dll</HintPath>
+    <Reference Include="Autofac.Configuration">
+      <HintPath>..\packages\Autofac.2.5.2.830\lib\NET40\Autofac.Configuration.dll</HintPath>
     </Reference>
     <Reference Include="Northwind.DAL, Version=1.0.4260.16030, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -78,14 +78,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="BasicTests.cs" />
-    <Compile Include="DataScopeTests.cs" />
-    <Compile Include="LLBLGenTransactionHarnessTests.cs" />
+    <Compile Include="LLBLGenTransactionFacadeTests.cs" />
+    <Compile Include="Person.cs" />
     <Compile Include="ServiceInfo\CustomerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServiceInfo\MyDataService.cs" />
+    <Compile Include="ServiceInfo\Functions.cs" />
+    <Compile Include="ServiceInfo\MyMappingStore.cs" />
     <Compile Include="ServiceInfo\OrderService.cs" />
-    <Compile Include="Support\TestHelpers.cs" />
+    <Compile Include="Session.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
@@ -100,6 +100,9 @@
       <Project>{F49E612C-1946-4E58-9DBE-0445BE5EC845}</Project>
       <Name>gcDataServices</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Support\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
