extracted linq from requirement of repository

--- a/src/gcDataServices/gcDataServices.LLBLGen.Tests/App.config
+++ b/src/gcDataServices/gcDataServices.LLBLGen.Tests/App.config
@@ -1,9 +1,19 @@
 ﻿<?xml version="1.0"?>
 <configuration>
+  <configSections>
+    <section name="sqlServerCatalogNameOverwrites" type="System.Configuration.NameValueSectionHandler" />
+  </configSections>
+
   <appSettings>
-    <add key="ConnectionString.SQL Server (SqlClient)" value="data source=192.168.1.51\SQLEXPRESS,50454;initial catalog=master;User ID=northwind;Password=northwind;persist security info=False;packet size=4096"/>
+    <add key="ConnectionString.SQL Server (SqlClient)" value="data source=192.168.1.51\SQLEXPRESS,50454;initial catalog=northwind;User ID=northwind;Password=northwind;persist security info=False;packet size=4096"/>
   </appSettings>
 
+
+  <sqlServerCatalogNameOverwrites>
+    <add key="northwind" value="" />
+  </sqlServerCatalogNameOverwrites>
+  
+  
   <system.diagnostics>
     <switches>
       <add name="SqlServerDQE" value="4" />
