--- a/src/gcDataServices/gcDataServices.LLBLGen/gcDataServices.LLBLGen.csproj
+++ b/src/gcDataServices/gcDataServices.LLBLGen/gcDataServices.LLBLGen.csproj
@@ -10,8 +10,9 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>GeniusCode.Components.DataServices</RootNamespace>
     <AssemblyName>gcDataServices.LLBLGen</AssemblyName>
-    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -51,6 +52,7 @@
   <ItemGroup>
     <Compile Include="LlblGenRepositoryConnection.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReflectionHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\gcDataServices\gcDataServices.csproj">
